# laminae

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/laminae/: Cargo.toml
crates/laminae-anthropic/: Cargo.toml  README.md
crates/laminae-anthropic/src/: lib.rs
crates/laminae-glassbox/: Cargo.toml
crates/laminae-glassbox/src/: lib.rs
crates/laminae-ironclad/: Cargo.toml
crates/laminae-ironclad/src/: lib.rs
crates/laminae-ironclad/src/sandbox/: linux.rs  macos.rs  mod.rs  noop.rs  windows.rs
crates/laminae-ollama/: Cargo.toml
crates/laminae-ollama/src/: lib.rs
crates/laminae-openai/: Cargo.toml  README.md
crates/laminae-openai/src/: lib.rs
crates/laminae-persona/src/: extractor.rs
crates/laminae-psyche/: Cargo.toml
crates/laminae-psyche/src/: lib.rs  prompts.rs
crates/laminae-python/: Cargo.toml  pyproject.toml
crates/laminae-python/src/: lib.rs
crates/laminae-shadow/: Cargo.toml
crates/laminae-shadow/src/: analyzer.rs  config.rs  extractor.rs  lib.rs  llm_reviewer.rs  prompts.rs  report.rs  sandbox.rs  scanner.rs
crates/laminae/examples/: ego_claude.rs  ego_openai.rs  full_stack.rs  quickstart.rs  safe_execution.rs  shadow_audit.rs
crates/laminae/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/backends/: claude.md  ollama.md  openai.md
docs/src/getting-started/: architecture.md  installation.md  quickstart.md
docs/src/layers/: cortex.md  glassbox.md  ironclad.md  persona.md  psyche.md  shadow.md
docs/src/recipes/: full-stack.md  safe-execution.md  voice-matching.md
docs/src/reference/: benchmarks.md  configuration.md  extension-points.md
