[package]
name = "laminae-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ai", "llm", "claude", "anthropic", "laminae"]
categories = ["api-bindings"]
description = "Anthropic Claude backend for the Laminae AI SDK"

[dependencies]
laminae-psyche = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
reqwest = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true }
anyhow.workspace = true
