[package]
name = "laminae-ironclad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Process-level execution sandbox for AI agents — command whitelist, network filter, resource watchdog"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
laminae-glassbox = { workspace = true }
