[package]
name = "laminae-ironclad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Process-level execution sandbox for AI agents — command whitelist, network filter, resource watchdog"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
laminae-glassbox = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ironclad_bench"
harness = false
