[package]
name = "laminae-psyche"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Multi-agent cognitive pipeline for AI — Id (creative), Superego (safety), Ego (executor)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
laminae-ollama = { workspace = true }
